--- a/src/components/game/round/round/Round.css
+++ b/src/components/game/round/round/Round.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     gap: 60px;
+    overflow: hidden;
 }
 
 .inventory-container {
